# Scaling-up-measurement-noise-scaling-laws

./: .gitignore  README.md  cell_scaling_fit_parameters.csv  collect_mi_results.csv  fitted_data_with_results.csv  hvg.ipynb  install_dependencies.sh  prepare_hvg.py  requirements.txt  run_larry_whole.py  run_larry_whole.slurm  run_merfish_whole.py  run_merfish_whole.slurm  run_pbmc_whole.py  run_pbmc_whole.slurm  run_shendure_whole.py  run_shendure_whole.slurm  single_job.py
analysis/: 2025-11-18_17-10_hyperparam_fits_cell_scaling.py  2025-11-18_17-20_hyperparm_fits_noise_scaling.py  2025-11-18_17-23_check_results.ipynb  2025-11-18_17-40_select_cell_scaling_with_smalles_avg_uncertainty_error copy.ipynb  2025-11-18_18_visualize_the_results_noise_scaling.py  2025-12-02_19-54_evaluate_mid_quality_models_on_full_data.py  2025-12-02_19_48_download_necessary_models.sh  2025-12-05_19-23_verify_mi_of_models_trained_on_low_quality_data.ipynb  2025-12-07_23-12_download_different_geneformer_models.sh  2025-12-07_23-21_evaluate_all_shendure_geneformer_models_on_mid_quality_data.py  2025-12-08_18-18_generate_new_scaling_curves_geneformer.ipynb  2025-12-08_22-10_download_data_to_retrain_scvi_models.sh  2025-12-08_22-15_reeval_scvis.py  (+24 more)
scaling_laws/: pyproject.toml  setup.py
scaling_laws/scaling_laws/: h5ad_reader.py
scaling_laws/scaling_laws/algo/: geneformer.py  pca.py  utils.py
scaling_laws/scaling_laws/prepare/: data.py
scaling_laws/src/scaling_laws/algo/: __init__.py  abc.py  geneformer.py  rp.py  scvi.py
scaling_laws/src/scaling_laws/prepare/: data.py  utils.py
(+86 files in other folders)
